k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foobar-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foobar-api
  template:
    metadata:
      labels:
        app: foobar-api
    spec:
      containers:
        - name: foobar-api
          image: foobar-api:local
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          volumeMounts:
            - name: certs-pvc
              mountPath: /cert
      volumes:
        - name: certs-pvc
          persistentVolumeClaim:
            claimName: foobar-api-certs
        - name: certs-secret
          secret:
            secretName: foobar-api-tls
