k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foobar-api
spec:
  type: ClusterIP
  selector:
    app: foobar-api
  ports:
    - port: 80
      targetPort: 80
